--- a/iOS/RankAppSwift/PostCell.xib
+++ b/iOS/RankAppSwift/PostCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="329"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="329"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="328.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7xE-2R-77S">
@@ -37,8 +37,8 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyO-2Y-2Pk">
-                                        <rect key="frame" x="64" y="37" width="277" height="16"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyO-2Y-2Pk">
+                                        <rect key="frame" x="64" y="31" width="277" height="33"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -49,12 +49,12 @@
                                     <constraint firstItem="G4g-YJ-cUv" firstAttribute="leading" secondItem="XQr-gV-Igm" secondAttribute="trailing" constant="8" id="7Fx-yc-TIK"/>
                                     <constraint firstItem="xyO-2Y-2Pk" firstAttribute="leading" secondItem="XQr-gV-Igm" secondAttribute="trailing" constant="8" id="Ew5-HD-6LJ"/>
                                     <constraint firstItem="XQr-gV-Igm" firstAttribute="leading" secondItem="LxH-PC-PeJ" secondAttribute="leading" constant="2" id="P2h-3S-tiz"/>
-                                    <constraint firstAttribute="bottom" secondItem="xyO-2Y-2Pk" secondAttribute="bottom" constant="19" id="PXe-jL-Do8"/>
-                                    <constraint firstItem="xyO-2Y-2Pk" firstAttribute="top" secondItem="G4g-YJ-cUv" secondAttribute="bottom" constant="8" id="VEX-xV-XvW"/>
+                                    <constraint firstAttribute="bottom" secondItem="xyO-2Y-2Pk" secondAttribute="bottom" constant="8" id="PXe-jL-Do8"/>
+                                    <constraint firstItem="xyO-2Y-2Pk" firstAttribute="top" secondItem="G4g-YJ-cUv" secondAttribute="bottom" constant="2" id="VEX-xV-XvW"/>
                                     <constraint firstAttribute="height" constant="72" id="Zra-Ee-Sgo"/>
                                     <constraint firstAttribute="trailing" secondItem="xyO-2Y-2Pk" secondAttribute="trailing" constant="18" id="aD6-YJ-n9h"/>
                                     <constraint firstItem="G4g-YJ-cUv" firstAttribute="top" secondItem="LxH-PC-PeJ" secondAttribute="top" constant="8" id="lpa-zD-dL7"/>
-                                    <constraint firstItem="xyO-2Y-2Pk" firstAttribute="top" secondItem="G4g-YJ-cUv" secondAttribute="bottom" constant="8" id="rK8-Vf-TW7"/>
+                                    <constraint firstItem="xyO-2Y-2Pk" firstAttribute="top" secondItem="G4g-YJ-cUv" secondAttribute="bottom" constant="2" id="rK8-Vf-TW7"/>
                                     <constraint firstItem="XQr-gV-Igm" firstAttribute="top" secondItem="LxH-PC-PeJ" secondAttribute="top" constant="8" id="tKg-9X-J3m"/>
                                 </constraints>
                             </view>
